# mendenhall-glacier

./: .gitignore  README.md  Untitled.ipynb  prototype-advection.ipynb  pyproject.toml  requirements.txt
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  prototype-advection-checkpoint.ipynb
basis/src/: basis.py  centerlines.py  slip.py  tvd_advection.py
basis/test/: input_file.toml  test_basis.py  test_tvd_advection.py
code/src/: basal_ice_stratigrapher.py  basis.py
code/test/: input_file.toml  test_basis.py
experiments/sensitivity/: default.toml  plot_sensitivity_magnitude.py  plot_sensitivity_results.py  results.csv  sensitivity-parameters.txt  sensitivity.py
experiments/sensitivity/outputs/: results.csv  results_100a.csv  results_250a.csv  results_250a_run2.csv
experiments/static-effective-pressure/: experiment.py  fast_input_file.toml  input_file.toml  plot-experiments.py  plot_centerlines.py  plot_experiments.py  plot_flux_histogram.py  slow_input_file.toml
experiments/static-effective-pressure/.ipynb_checkpoints/: explore-output-checkpoint.ipynb  input_file-checkpoint.toml
inputs/: centerline-binary.tif  centerline-binary.tif.aux.xml  centerline.geojson  plot_boundary_conditions.py  plot_fewer_boundary_conditions.py
inputs/field-data/: data-abstract.txt  outcrop-data-mendenhall-glacier-2021.ods
inputs/igm-results/: ex.nc  fast-output.nc  fast-output.nc.aux.xml  input_saved.nc  slow-output.nc
notebooks/: centerlines-prototype.ipynb  prototype-advection.ipynb  tvd-advection-test.ipynb
(+166 files in other folders)
