[tool.poetry]
name = "mendenhall"
version = "0.1.0"
description = ""
authors = ["Ethan Pierce <ethan.pierce@colorado.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
jupyter = "^1.0.0"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
scipy = "^1.10.1"
landlab = "^2.6.0"
tomli = "^2.0.1"
pandas = "^2.0.1"
netCDF4 = "^1.6.3"
jupyterlab = "^4.0.0"
cmcrameri = "^1.7"
scikit-image = "^0.22.0"
geopandas = "^0.14.0"
rioxarray = "^0.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
